fix(ui): uneven heigh in buttons

--- a/styles/_button.scss
+++ b/styles/_button.scss
@@ -18,6 +18,9 @@
             color:$main-purple;
         }
     }
+    &.outline-transparent {
+        border:1px solid transparent;
+    }
     &:disabled {
         opacity: 0.7;
     }
